plugins {
    id 'org.beryx.jlink' version '2.26.0'
    id 'java'
    id 'application'
}

java {
    modularity.inferModulePath = true
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

application {
    mainModule = 'com.example.appcore'
    mainClass = 'com.example.appcore.utils.Main'
}

jlink {
    launcher {
        jvmArgs = ['--add-modules', 'com.example.appcore']
        name = "appCore"
    }
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    jpackage {
        imageName = 'core'
        skipInstaller = true
    }
}